# symbiflow-arch-defs

common/cmake/: v2x.cmake
ice40/devices/layouts/icebox/: CMakeLists.txt
utils/: fix_xc7_carry.py
utils/lib/: progressbar_utils.py
xc/common/cmake/: vivado.cmake
xc/xc7/techmap/: cells_map.v
xc/xc7/tests/soc/litex/: CMakeLists.txt  generate.py
xc/xc7/toolchain_wrappers/: env  symbiflow_generate_constraints  symbiflow_pack  symbiflow_place  symbiflow_route  symbiflow_synth  symbiflow_write_bitstream  symbiflow_write_fasm  symbiflow_write_xml_rr_graph  vpr_common
xc/xc7/yosys/: synth.tcl
